Use protocol-relative URLs in templates, where possible. Update references to Shibboleth Consortium.

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,18 +28,18 @@
 	</div>
 	<div id="header">
 		<div id="header-image">
-			<a href="http://www.grnet.gr/"><img src="/static/images/grnet.png" alt="GRNET" title="GRNET"></a>
+			<a href="//www.grnet.gr/"><img src="/static/images/grnet.png" alt="GRNET" title="GRNET"></a>
 		</div>
 		<div id="header-outer-text"><div id="header-inner-text">
-			<a href="http://aai.grnet.gr/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a>
+			<a href="//aai.grnet.gr/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a>
 		</div></div>
 	</div>
 	<div id="header-menu">
-		<a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> 
-		• <a href="http://aai.grnet.gr/participants/">{% trans "Participants" %}</a>
-		• <a href="http://aai.grnet.gr/services/">{% trans "Services" %}</a> 
-		• <a href="http://aai.grnet.gr/documentation/">{% trans "Documentation" %}</a> 
-		• <a href="http://aai.grnet.gr/help/">{% trans "Help" %}</a> 
+		<a href="//wayf-test.grnet.gr/">{% trans "Select your home institution" %}</a> 
+		• <a href="//aai.grnet.gr/participants/">{% trans "Participants" %}</a>
+		• <a href="//aai.grnet.gr/services/">{% trans "Services" %}</a> 
+		• <a href="//aai.grnet.gr/documentation/">{% trans "Documentation" %}</a> 
+		• <a href="//aai.grnet.gr/help/">{% trans "Help" %}</a> 
 	</div>
 	
 	<h1>{% block header %}AAI{% endblock %}</h1>
