--- a/templates/el/documentation.html
+++ b/templates/el/documentation.html
@@ -12,20 +12,19 @@
 
 <h2>Λογισμικό</h2>
 <p>
-Στην πλειονότητα της Υποδομής χρησιμοποιείται αυτή τη στιγμή και προτείνεται το λογισμικό
-<strong><a href="http://shibboleth.internet2.edu/">Shibboleth</a></strong> του
-Αμερικάνικου ακαδημαϊκού δικτύου <a href="http://www.internet2.edu/">Internet2</a>.
+Στην πλειονότητα της Υποδομής χρησιμοποιείται αυτή τη στιγμή το λογισμικό του
+<strong><a href="//shibboleth.net/">Shibboleth Consortium</a></strong>.
 Ωστόσο, οποιοδήποτε λογισμικό που συμμορφώνεται με τα πρότυπα SAML 2.0 του
 οργανισμού OASIS, είτε ως Πάροχος Ταυτότητας είτε ως Πάροχος Υπηρεσιών, μπορεί
 να διασυνδεθεί στην Υποδομή.
 </p>
 
 <p>
-Για την εγκατάσταση και παραμετροποίηση του Shibboleth, προτείνεται η ανάγνωση
-της <a href="http://www.switch.ch/aai/support/">τεκμηρίωσης υλοποίησης
-της αντίστοιχης ομοσπονδίας του Ελβετικού ακαδημαϊκού δικτύου (SWITCH)</a> ενώ
+Για την εγκατάσταση και παραμετροποίηση του Shibboleth προτείνεται η ανάγνωση
+της <a href="//www.switch.ch/aai/support/">τεκμηρίωσης υλοποίησης
+της αντίστοιχης ομοσπονδίας του Ελβετικού ακαδημαϊκού δικτύου (SWITCH)</a>, ενώ
 ιδιαίτερη βοήθεια μπορεί να προσφέρει και το 
-<a href="https://spaces.internet2.edu/display/SHIB/">Wiki του Shibboleth</a>.
+<a href="//wiki.shibboleth.net/confluence/display/SHIB2/Home">Wiki του Shibboleth</a>.
 </p>
 
 <h2>Metadata</h2>
