--- a/templates/el/help.html
+++ b/templates/el/help.html
@@ -31,7 +31,7 @@
 </ul>
 {% endif %}</li>
 <li>Αν αντιμετωπίσατε πρόβλημα <b>στην ενδιάμεση ιστοσελίδα <a
-href="http://wayf.grnet.gr">http://wayf.grnet.gr</a></b>,
+href="//wayf.grnet.gr">wayf-test.grnet.gr</a></b>,
 μπορείτε να επικoινωνήσετε με το Helpdesk του ΕΔΕΤ.</li>
 </ul>
 
@@ -68,15 +68,13 @@ href="http://wayf.grnet.gr">http://wayf.grnet.gr</a></b>,
   <li>ανάπτυξη έγκυρης υπηρεσίας καταλόγου LDAP και διαδικασιών συντήρησης των
   στοιχείων των μελών του ιδρύματος</li>
   <li>εγκατάσταση λογισμικού Identity Provider συμβατού με SAML 2.0.
-  Προτείνεται το <a href="http://shibboleth.internet2.edu/">Shibboleth IdP</a>
-  που έχει αναπτύξει το <a href="http://www.internet2.edu">Internet2</a>.
+  Προτείνεται το <a href="//shibboleth.net/products/identity-provider.html">Shibboleth IdP</a>.
   </li>
 </ul>
 <li><b>Πώς μπορώ να προσφέρω μια υπηρεσία στα μέλη της Ομοσπονδίας;</b>
 <br />Απαιτείται η εγκατάσταση λογισμικού Service Provider συμβατού με
   SAML 2.0. Προτείνεται το <a
-href="http://shibboleth.internet2.edu/">Shibboleth SP</a> που έχει αναπτύξει το
-<a href="http://www.internet2.edu">Internet2</a>.</li>
+href="//shibboleth.net/products/service-provider.html">Shibboleth SP</a>.</li>
 <li><b>Ποιός είναι υπεύθυνος για τη διαχείριση της υποδομής της Ομοσπονδίας;</b>
 <br />Την Ομοσπονδία συντηρεί και διαχειρίζεται το Κέντρο Δικτύων (Network
 Operations Centre, NOC) του ΕΔΕΤ. Για προσθαφαιρέσεις, λοιπές αλλαγές και
