--- a/templates/el/registry/eduPersonEntitlement.html
+++ b/templates/el/registry/eduPersonEntitlement.html
@@ -8,10 +8,10 @@
 βρίσκονται σε χρήση:
 <ul>
   <li><strong>urn:mace:dir:entitlement:common-lib-terms</strong>, πρόσβαση σε ακαδημαϊκές βιβλιοθήκες</li>
-  <li><strong>urn:mace:grnet.gr:pki:user</strong>, πρόσβαση στην <a href="https://pki.grnet.gr/">υπηρεσία έκδοσης προσωπικών ψηφιακών πιστοποιητικών X.509 μέσω της ΥΔΚ ΕΔΕΤ</a></li>
-  <li><strong>urn:mace:grnet.gr:pki:admin</strong>, πρόσβαση στην <a href="https://pki.grnet.gr/">υπηρεσία έκδοσης προσωπικών ψηφιακών πιστοποιητικών X.509 μέσω της ΥΔΚ ΕΔΕΤ</a>, ως διαχειριστής φορέα</li>
-  <li><strong>urn:mace:grnet.gr:eduroam:admin</strong>, πρόσβαση στην <a href="https://www.eduroam.gr/management">εφαρμογή διαχείρισης eduroam, ως διαχειριστής φορέα</a></li>
-  <li><strong>urn:mace:grnet.gr:fod:admin</strong>, πρόσβαση στην <a href="https://fod.grnet.gr/fod/info/el/">εφαρμογή Firewall on Demand, ως διαχειριστής φορέα</a></li>
+  <li><strong>urn:mace:grnet.gr:pki:user</strong>, πρόσβαση στην <a href="//pki.grnet.gr/">υπηρεσία έκδοσης προσωπικών ψηφιακών πιστοποιητικών X.509 μέσω της ΥΔΚ ΕΔΕΤ</a></li>
+  <li><strong>urn:mace:grnet.gr:pki:admin</strong>, πρόσβαση στην <a href="//pki.grnet.gr/">υπηρεσία έκδοσης προσωπικών ψηφιακών πιστοποιητικών X.509 μέσω της ΥΔΚ ΕΔΕΤ</a>, ως διαχειριστής φορέα</li>
+  <li><strong>urn:mace:grnet.gr:eduroam:admin</strong>, πρόσβαση στην <a href="//www.eduroam.gr/management">εφαρμογή διαχείρισης eduroam, ως διαχειριστής φορέα</a></li>
+  <li><strong>urn:mace:grnet.gr:fod:admin</strong>, πρόσβαση στην <a href="//fod.grnet.gr/fod/info/el/">εφαρμογή Firewall on Demand, ως διαχειριστής φορέα</a></li>
 </ul>
 
 {% endblock %}
