--- a/templates/en-us/documentation.html
+++ b/templates/en-us/documentation.html
@@ -13,19 +13,18 @@
 <h2>Software</h2>
 <p>
 The majority of the infrastructure is using the 
-<strong><a href="http://shibboleth.internet2.edu/">Shibboleth</a></strong>
-software, of the American research and educational network 
-<a href="http://www.internet2.edu/">Internet2</a>.
+<strong><a href="//shibboleth.net/">Shibboleth Consortium</a></strong>
+software.
 However, any software conforming to the OASIS SAML 2.0 specifications can be
 connected to the infrastructure, either as an Identity or a Service Provider.
 </p>
 
 <p>
-For the installation and configuration of Shibboleth, it is recommended to
+For the installation and configuration of Shibboleth it is recommended to
 read the
-<a href="http://www.switch.ch/aai/support/">documentation of the 
-Swiss research and technology network (SWITCH)'s federation</a>; 
-<a href="https://spaces.internet2.edu/display/SHIB/">Shibboleth's Wiki</a> is
+<a href="//www.switch.ch/aai/support/">documentation provided by the 
+Swiss research and technology network (SWITCH) federation</a>; 
+<a href="//wiki.shibboleth.net/confluence/display/SHIB2/Home">Shibboleth's Wiki</a> is
 also an excellent documentation resource.
 </p>
 
