--- a/templates/en-us/help.html
+++ b/templates/en-us/help.html
@@ -24,7 +24,7 @@ According to your selected Home Organization, &quot;<b>{{ idpname }}</b>&quot;, 
 </ul>
 {% endif %}</li>
 <li>
-If you encountered a problem in the <b>intermediate webpage, <a href="http://wayf.grnet.gr">wayf.grnet.gr</a></b>, then you should contact GRNET's Helpdesk.</li>
+If you encountered a problem in the <b>intermediate webpage, <a href="//wayf.grnet.gr">wayf-test.grnet.gr</a></b>, then you should contact GRNET's Helpdesk.</li>
 </ul>
 
 <h2>Frequently Asked Questions</h2>
@@ -47,12 +47,12 @@ If you encountered a problem in the <b>intermediate webpage, <a href="http://way
 <ul>
   <li>the development of a comprehensive LDAP-based directory service and the infrastructure needed to keep account data up-to-date</li>
   <li>the installation of an AAI &quot;Identity Provider&quot; software compatible with the SAML 2.0 specification.
-  <a href="http://shibboleth.internet2.edu/">Shibboleth IdP</a>, developed by <a href="http://www.internet2.edu">Internet2</a>, is recommended.
+  <a href="//shibboleth.net/products/identity-provider.html/">Shibboleth IdP</a> is recommended.
   </li>
 </ul>
 For more information, please contact GRNET's Helpdesk</li>
 <li><b>How can I provide a service to the Federation's members?</b><br />
-You must install a &quot;Service Provider&quot; software, compatible with the SAML 2.0 specification. <a href="http://shibboleth.internet2.edu/">Shibboleth SP</a>, developed by <a href="http://www.internet2.edu">Internet2</a>, is recommended.</li>
+You must install a &quot;Service Provider&quot; software, compatible with the SAML 2.0 specification. <a href="//shibboleth.net/products/service-provider.html">Shibboleth SP</a> is recommended.</li>
 <li><b>Who is operating the Federation's infrastructure?</b>
 <br />The Federation is operated by GRNET's Network Operations Centre (NOC). For additions, removals, other changes and troubleshooting <i>regarding the Federation itself</i> you may contact GRNET's Helpdesk.</li>
 </ul>
