--- a/templates/en-us/registry/urn.html
+++ b/templates/en-us/registry/urn.html
@@ -4,10 +4,10 @@
 {% block header %}Registrations in the urn:mace:grnet.gr namespace{% endblock %}
 {% block content %}
 
-<a href="http://middleware.internet2.edu/MACE/">MACE</a> has delegated the operation of <strong>urn:mace:grnet.gr</strong> namespace to GRNET.
+<a href="//middleware.internet2.edu/MACE/">MACE</a> has delegated the operation of <strong>urn:mace:grnet.gr</strong> namespace to GRNET.
 <ul>
-  <li>Internet2/MACE Uniform Resource Name (URN) <a href="http://middleware.internet2.edu/urn-mace/">registry</a></li>
-  <li><a href="http://tools.ietf.org/html/rfc3613">RFC 3613</a> defines the "urn:mace" namespace and describes the procedures and policies governing its' use.</li>
+  <li>Internet2/MACE Uniform Resource Name (URN) <a href="//middleware.internet2.edu/urn-mace/">registry</a></li>
+  <li><a href="//tools.ietf.org/html/rfc3613">RFC 3613</a> defines the "urn:mace" namespace and describes the procedures and policies governing its' use.</li>
 </ul>
 
 This namespace is currently only used for values documented in the <a href="/registry/eduPersonEntitlement/"><em>eduPersonEntitlement</em></a> registry.
