--- a/templates/en-us/services.html
+++ b/templates/en-us/services.html
@@ -5,14 +5,14 @@
 {% block content %}
 <p>Some of the services that are currently provided over GRNET's AAI:</p>
 <ul>
-<li><a href="http://pithos.grnet.gr/">“Pithos”</a>, free on-line data storage service</li>
+<li><a href="//pithos.grnet.gr/">“Pithos”</a>, free on-line data storage service</li>
 <li><a href="http://www.eudoxus.gr/">“Eudoxus”</a>, student textbook distribution service</a></li>
-<li><a href="https://www.dreamspark.com/">Microsoft Dreamspark</a>, free Microsoft software for students</li>
-<li><a href="http://anafandon.grnet.gr/">Anafandon-MSDNAA</a>, free access to MSDN-Academic Alliance software for students <em>(requires a departmental subscription)</em></li>
-<li><a href="http://forrester.grnet.gr/">Forrester</a>, free access to Forrester Research's research papers</li>
+<li><a href="//www.dreamspark.com/">Microsoft Dreamspark</a>, free Microsoft software for students</li>
+<li><a href="//anafandon.grnet.gr/">Anafandon-MSDNAA</a>, free access to MSDN-Academic Alliance software for students <em>(requires a departmental subscription)</em></li>
+<li><a href="//forrester.grnet.gr/">Forrester</a>, free access to Forrester Research's research papers</li>
 <li><a href="http://iptv.grnet.gr/">IPTV</a>, digital television broadcasting</li>
 <li><a href="http://rts.grnet.gr/">Teleconference service</a> Voice-over-IP &amp; real-time services)</li>
-<li><a href="http://mynetlab.grnet.gr/">myNetLab</a>, networking labs using real hardware</li>
-<li><a href="http://fod.grnet.gr/">Firewall on Demand (FoD)</a>, mitigation of network attacks</li>
+<li><a href="//mynetlab.grnet.gr/">myNetLab</a>, networking labs using real hardware</li>
+<li><a href="//fod.grnet.gr/">Firewall on Demand (FoD)</a>, mitigation of network attacks</li>
 </ul>
 {% endblock %}
