Fix references to {wayf,aai}-test.grnet.gr introduced by mistake in templates.

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 		</div></div>
 	</div>
 	<div id="header-menu">
-		<a href="//wayf-test.grnet.gr/">{% trans "Select your home institution" %}</a> 
+		<a href="//wayf.grnet.gr/">{% trans "Select your home institution" %}</a> 
 		• <a href="//aai.grnet.gr/participants/">{% trans "Participants" %}</a>
 		• <a href="//aai.grnet.gr/services/">{% trans "Services" %}</a> 
 		• <a href="//aai.grnet.gr/documentation/">{% trans "Documentation" %}</a> 
