--- a/templates/el/help.html
+++ b/templates/el/help.html
@@ -31,7 +31,7 @@
 </ul>
 {% endif %}</li>
 <li>Αν αντιμετωπίσατε πρόβλημα <b>στην ενδιάμεση ιστοσελίδα <a
-href="//wayf.grnet.gr">wayf-test.grnet.gr</a></b>,
+href="//wayf.grnet.gr">wayf.grnet.gr</a></b>,
 μπορείτε να επικoινωνήσετε με το Helpdesk του ΕΔΕΤ.</li>
 </ul>
 
