--- a/templates/en-us/help.html
+++ b/templates/en-us/help.html
@@ -24,7 +24,7 @@ According to your selected Home Organization, &quot;<b>{{ idpname }}</b>&quot;, 
 </ul>
 {% endif %}</li>
 <li>
-If you encountered a problem in the <b>intermediate webpage, <a href="//wayf.grnet.gr">wayf-test.grnet.gr</a></b>, then you should contact GRNET's Helpdesk.</li>
+If you encountered a problem in the <b>intermediate webpage, <a href="//wayf.grnet.gr">wayf.grnet.gr</a></b>, then you should contact GRNET's Helpdesk.</li>
 </ul>
 
 <h2>Frequently Asked Questions</h2>
