--- a/templates/el/services.html
+++ b/templates/el/services.html
@@ -3,10 +3,10 @@
 {% block title %}Συνδεδεμένες υπηρεσίες{% endblock %}
 {% block header %}Συνδεδεμένες υπηρεσίες{% endblock %}
 {% block content %}
-<p>Ενδεικτική απαρίθμηση μερικών από τις υπηρεσίες που παρέχονται μέσω της Υποδομής ΑΑΙ
+<p>Ενδεικτικά αναφέρονται μερικές από τις υπηρεσίες που παρέχονται μέσω της Υποδομής ΑΑΙ
 του ΕΔΕΤ στην ακαδημαϊκή, ερευνητική και εκπαιδευτική κοινότητα της Ελλάδας:</p>
 <ul>
-<li><a href="//okeanos.grnet.gr/">~okeanos</a>, υπηρεσίες υπολογιστικού νέφους και αποθήκευσης</li>
+<li><a href="//okeanos.grnet.gr/">~okeanos</a>, ενοποιημένες υπηρεσίες εικονικών μηχανών και αποθήκευσης σε υπολογιστικό νέφος</li>
 <li><a href="//pithos.grnet.gr/">«Πίθος»</a>, υπηρεσία δωρεάν αποθήκευσης αρχείων</li>
 <li><a href="http://www.eudoxus.gr/">«Εύδοξος»</a>, υπηρεσία ολοκληρωμένης διαχείρισης ακαδημαϊκών συγγραμμάτων</li>
 <li><a href="//www.dreamspark.com/">Microsoft Dreamspark</a>, υπηρεσία διανομής δωρεάν λογισμικού της Microsoft σε φοιτητές</li>
