--- a/templates/en-us/services.html
+++ b/templates/en-us/services.html
@@ -5,7 +5,7 @@
 {% block content %}
 <p>Some of the services that are currently provided over GRNET's AAI:</p>
 <ul>
-<li><a href="//okeanos.grnet.gr/">~okeanos</a>, cloud computing and storage services</li>
+<li><a href="//okeanos.grnet.gr/">~okeanos</a>, integrated cloud computing and storage services</li>
 <li><a href="//pithos.grnet.gr/">“Pithos”</a>, free on-line data storage service</li>
 <li><a href="http://www.eudoxus.gr/">“Eudoxus”</a>, student textbook distribution service</a></li>
 <li><a href="//www.dreamspark.com/">Microsoft Dreamspark</a>, free Microsoft software for students</li>
