--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>{% trans "GRNET AAI Federation" %} • {% block title %}{% endblock %}</title>
+<title>{% block title %}{% endblock %}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" lang="{{ LANGUAGE_CODE }}">
 <meta name="robots" content="ALL">
 <meta name="revisit-after" content="30 days">
@@ -12,37 +12,18 @@
 
 <body>
 
-<div id="language">
+<!--div id="language">
 	<div id="language-container">
 		<div id="language-div">
 			<div id="langtop"><div></div></div>
-			<a href="/setlanguage/el">Ελληνικά</a>&nbsp;&nbsp;•&nbsp;&nbsp;<a href="/setlanguage/en">English</a>
+			<-a href="/setlanguage/el">Ελληνικά</a>&nbsp;&nbsp;•&nbsp;&nbsp;<a href="/setlanguage/en">English</a>
 		</div>
 	</div>
-</div>
+</div-->
 
 <div id="content">
-	<div id="pagetop"><div></div></div>
-	<div id="aailogo">
-		<img src="/static/images/aai.gif">
-	</div>
-	<div id="header">
-		<div id="header-image">
-			<a href="//www.grnet.gr/"><img src="/static/images/grnet.png" alt="GRNET" title="GRNET"></a>
-		</div>
-		<div id="header-outer-text"><div id="header-inner-text">
-			<a href="//aai.grnet.gr/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a>
-		</div></div>
-	</div>
-	<div id="header-menu">
-		<a href="//wayf.grnet.gr/">{% trans "Select your home institution" %}</a> 
-		• <a href="//aai.grnet.gr/participants/">{% trans "Participants" %}</a>
-		• <a href="//aai.grnet.gr/services/">{% trans "Services" %}</a> 
-		• <a href="//aai.grnet.gr/documentation/">{% trans "Documentation" %}</a> 
-		• <a href="//aai.grnet.gr/help/">{% trans "Help" %}</a> 
-	</div>
-	
-	<h1>{% block header %}AAI{% endblock %}</h1>
+
+	<h1>{% block header %}{% endblock %}</h1>
 	<div id="rbroundbox">
 		<div id="rbtop"><div></div></div>
 		<div id="rbcontent">
@@ -51,7 +32,6 @@
 		</div>
 		<div id="rbbot"><div></div></div>
 	</div>
-	<p class="footer">{% trans "The Greek Research and Technology Network (GRNET) provides the Hellenic Academic, Research and Education community with advanced services, high-capacity national and international Internet connectivity, assisting the operation of all Universities, Technological Educational Institutions and Research Institutes in Greece."%}</p>
 	<div id="pagebot"><div></div></div>
 </div>
 </body>
