--- a/wayf/templates/wayf.html
+++ b/wayf/templates/wayf.html
@@ -6,6 +6,7 @@
 <p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access AAI-enabled resources. Don't use this feature if you use several AAI accounts.</p>
 <div id="idpform">
 <form id="idp_selection" method="post">
+    {% csrf_token %}
 	<select name="user_idp">
 	{% include "idp_dropdown.html" %}
 	</select>
