removed more aai specific templates

--- a/wayf/templates/wayf.html
+++ b/wayf/templates/wayf.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "Permanently set your Home Organization" %}{% endblock %}
 {% block header %}{% trans "Permanently set your Home Organization" %}{% endblock %}
 {% block content %}
-<p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access AAI-enabled resources. Don't use this feature if you use several AAI accounts.</p>
+<p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access this webpage. Don't use this feature if you use several accounts.</p>
 <div id="idpform">
 <form id="idp_selection" method="post">
     {% csrf_token %}
