--- a/wayf/templates/wayf_from_sp.html
+++ b/wayf/templates/wayf_from_sp.html
@@ -3,7 +3,7 @@
 {% block title %}Select your Home Organization{% endblock %}
 {% block header %}Select your Home Organization{% endblock %}
 {% block content %}
-<p>You were redirected to this page because you tried to access a service that uses GRNET's AAI. In order to proceed, you have to select your Home Organization from the list below. You may save your selection, in order to avoid this question during future uses of GRNET's AAI.</p>
+<p>In order to proceed, you have to select your Home Organization from the list below. You may save your selection, in order to avoid this question during future uses of this service.</p>
 
 <div id="idpform">
 <form id="idp_selection" method="post">
