--- a/wayf/templates/wayf_set.html
+++ b/wayf/templates/wayf_set.html
@@ -15,6 +15,6 @@ Your selected Home Organization is:
 </form>
 </div>
 <p>
-A default setting for your Home Organization has the effect that you don't need to select your Home Organization anymore when accessing AAI-enabled resources with this web browser.
+A default setting for your Home Organization has the effect that you don't need to select your Home Organization anymore when accessing this webpage with this web browser.
 </p>
 {% endblock %}
