don't dissable radio boxes

--- a/wayf/templates/wayf_from_sp.html
+++ b/wayf/templates/wayf_from_sp.html
@@ -22,8 +22,8 @@
 	</script>
 	<div id="userprefs">
 	<input type="checkbox" name="save" value="1" onclick="toggleRadios();"/>Save my preference:</input>
-	<input type="radio" id="sesssave" name="savetype" value="session" disabled="true" checked="true" />For this browser session</input>
-	<input type="radio" id="permsave" name="savetype" value="perm" disabled="true" />Permanently</input><br />
+	<input type="radio" id="sesssave" name="savetype" value="session"  checked="true" />For this browser session</input>
+	<input type="radio" id="permsave" name="savetype" value="perm" />Permanently</input><br />
 	</div>
 </form>
 </div>
