--- a/wayf/templates/idp_dropdown.html
+++ b/wayf/templates/idp_dropdown.html
@@ -1,11 +1,11 @@
 	{% for category, insts in  idplist %}
 		<optgroup label="{{ category.name }}">
 		{% for inst in insts %}
-			{% ifequal inst.id selected.id %}
+			{% if inst.id == selected.id %}
 			<option value="{{ inst.id }}" selected="true">{{ inst.name }}</option>
 			{% else %}
 			<option value="{{ inst.id }}">{{ inst.name }}</option>
-			{% endifequal %}
+			{% endif %}
 		{% endfor %}
 		</optgroup>
 	{% endfor %}
